Appearance fixes with navbar, collapse button and version text

--- a/EtlManager/wwwroot/css/site.css
+++ b/EtlManager/wwwroot/css/site.css
@@ -42,11 +42,11 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 /*Empty space between top bar and navigation menu with smaller screens (in case there are buttons on the top bar)*/
-/*@media (max-width: 767.98px) {
+@media (max-width: 992px) {
     .sidebar {
-        top: 5rem;
+        top: 2rem;
     }
-}*/
+}
 
 .sidebar-sticky {
     position: relative;
